projects/composition/src/app/pages/button-page/button-page.component.scss
.buttons-group {
  margin-bottom: 2rem;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  &-title {
    font-size: 1.5rem;
    color: var(--cps-color-depth);
    border-bottom: 0.0625rem solid lightgrey;
    margin-bottom: 0.75rem;
    padding-bottom: 0.5rem;
    font-weight: 600;
  }
  &-row {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 1.125rem;
    align-items: center;
  }
}

.dark-background {
  background-color: var(--cps-color-calm);
  padding-top: 1.125rem;
  padding-bottom: 1.125rem;
  padding-left: 1.125rem;
  padding-right: 1.125rem;
}

.native-types-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  max-width: 25rem;

  &__message {
    color: var(--cps-color-depth);
    font-style: italic;
  }
}

